Avoid table jumping until JS kicks in

--- a/app/assets/stylesheets/application/table.css
+++ b/app/assets/stylesheets/application/table.css
@@ -1,4 +1,8 @@
 @layer {
+  table-saw {
+    display: block;
+  }
+
   nav + :is(table, table-saw) {
     margin-block-start: 2rem;
   }
